include fix for overflow issue

--- a/packages/devextreme-scss/scss/widgets/fluent/treeList/_sizes.scss
+++ b/packages/devextreme-scss/scss/widgets/fluent/treeList/_sizes.scss
@@ -3,6 +3,6 @@
 
 // adduse
 
-$treelist-expanded-icon-margin-left: 5px !default;
+$treelist-expanded-icon-margin-left: 3px !default;
 $treelist-collapsed-icon-margin-left: 6px !default;
 $treelist-icon-margin-top: math.div($fluent-base-icon-size, 2) !default;
